<resources>
    <string name="app_name">MacautoWarehouse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Scan Restart</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_msg">Delete this?</string>
    <string name="delete_this_item">Delete this item?</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="exit_app_title">Exit</string>
    <string name="exit_app_msg">Exit from this App?</string>
    <string name="login_no_emp">This account is not exist</string>
    <string name="login_password_error">Password error</string>
    <string name="logout_title">Log out</string>
    <string name="logout_title_msg">Log out from this account?</string>
    <string name="Processing">Processing...</string>
    <string name="rescan">Re-scan</string>
    <string name="search">Search</string>
    <string name="search_again">Re-search</string>
    <string name="hide_keyboard">Hide keyboard</string>
    <string name="show_keyboard">Show keyboard</string>
    <string name="nav_receiving">Receiving</string>
    <string name="nav_shipment">Shipment</string>
    <string name="nav_allocation_send">Send message to allocate</string>
    <string name="nav_allocation">Allocation Message</string>
    <string name="nav_entering_warehouse">Entering Warehouse</string>
    <string name="nav_production_storage">Production Storage</string>
    <string name="nav_receiving_inspection">Receiving Inpsection</string>
    <string name="nav_print_tag">Print Tag</string>
    <string name="nav_other">Other</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_login">Login</string>
    <string name="socket_timeout">Connection Timeout. Please try again.</string>
    <string name="socket_failed">Cannot connect to server.</string>
    <string name="login_account">Account</string>
    <string name="login_password">Password</string>
    <string name="login_confirm">Confirm</string>
    <string name="not_locate_no_msg">Not locate barcode</string>
    <string name="item_title_check_sp">V</string>
    <string name="item_title_rvu01">Stock In No.</string>
    <string name="item_title_rvv02">No.</string>
    <string name="item_title_rvb05">Dash Number</string>
    <string name="item_title_pmn041">Name of product</string>
    <string name="item_title_ima021">Spec</string>
    <string name="item_title_rvv32">Warehouse No.</string>
    <string name="item_title_rvv33">Actual storage</string>
    <string name="item_title_rvv34">batch number</string>
    <string name="item_title_rvb33">Quantity</string>
    <string name="item_title_pmc03">Vendor</string>
    <string name="item_title_gen02">Warehouse staff</string>
    <string name="item_title_rvv33_scan">Scan</string>
    <string name="item_title_confirm_stock_in">Confirm Into Stock</string>
    <string name="item_title_rva01">Receive Order</string>
    <string name="item_total">total %s</string>
    <string name="action_shipment_main">Shipping Main</string>
    <string name="action_shipment_find">Find in warehouse</string>
    <string name="action_allocation_find">Find in warehouse</string>
    <string name="action_allocation_replenishment">Replenishment</string>
    <string name="action_allocation_send_msg_to_reserve">Send msg to reserve</string>
    <string name="action_allocation_msg">Message</string>
    <string name="action_allocation_area_confirm">Allocation area confirm</string>
    <string name="action_allocation_direct">Direct Allocation</string>
    <string name="action_receiving_main">Receiving</string>
    <string name="action_receiving_record">Receiving Record</string>
    <string name="action_receiving_board">Receiving Board</string>
    <string name="action_receiving_multi">Receiving Multi</string>
    <string name="action_entering_warehouse_main">Entering Warehouse</string>
    <string name="action_entering_warehouse_find">Find in warehouse</string>
    <string name="action_production_storage_main">Production Storage</string>
    <string name="action_production_storage_find">Find in warehouse</string>
    <string name="action_production_storage_scan">Scan receiving tag</string>
    <string name="action_camera_scan">Camera Scan</string>
    <string name="action_receiving_inspection_main">Receiving Inspection</string>
    <string name="search_in_stock_part_no">Part No.</string>
    <string name="search_in_stock_batch_no">Batch No.</string>
    <string name="search_in_stock_name">Name</string>
    <string name="search_in_stock_spec">Specification</string>
    <string name="entering_warehouse_wait_for_scan_hint">Wait for scan...</string>
    <string name="entering_warehouse_rescan">Re-scan</string>
    <string name="entering_warehouse_confirm">Enter Confirm</string>
    <string name="get_receive_goods_fail">Can not get data. Please scan again.</string>
    <string name="get_receive_goods_success">Get data success!</string>
    <string name="entering_warehouse_dialog_title">Warehouse Storage</string>
    <string name="entering_warehouse_dialog_content">Confirm this warehouse storage?</string>
    <string name="entering_warehouse_complete">Warehouse storage complete</string>
    <string name="entering_warehouse_failed">Warehouse storage failed. Please try again.</string>
    <string name="entering_warehouse_dialog_total">Total : %s</string>
    <string name="entering_warehouse_dialog_index">Index</string>
    <string name="entering_warehouse_dialog_head">Storing place split</string>
    <string name="entering_warehouse_into_stock">Into Stock</string>
    <string name="entering_warehouse_no_record">No Record</string>
    <string name="entering_warehouse_tt_split_rvv_failed">Locate separated fail. Please contact IT.</string>
    <string name="entering_warehouse_locate_no_not_scan">Cannot run in stock procedure. Some locate no was not scanned</string>
    <string name="entering_warehouse_same_in_no_not_check">Cannot run in stock procedure. Some items with same In-No. were not checked.</string>
    <string name="entering_warehouse_set_check_before_in_stock">Check item before press in stock button.</string>
    <string name="entering_warehouse_split_complete">Split quantity complete. Please re-scan.</string>
    <string name="receiving_rec_no">Receiving No.</string>
    <string name="receiving_rec_date">Receiving Date (yyyyMMdd)</string>
    <string name="receiving_vendor_no">Vendor No.</string>
    <string name="receiving_edi_shipping_no">EDI Shipping No.(Scan Barcode)</string>
    <string name="receiving_rec_locate_no">Receiving Location</string>
    <string name="receiving_progress_delivery_note_enter">Delivery note enter</string>
    <string name="allocation_send_message_to_material_work_order">Work Order</string>
    <string name="allocation_send_message_to_material_staging_area">Staging Area</string>
    <string name="allocation_send_message_to_material_stock_locate">Stock Locate</string>
    <string name="allocation_send_message_to_material_rate">Rate</string>
    <string name="allocation_send_message_to_material_production_no">Production No.</string>
    <string name="allocation_send_message_to_material_model_type">Model Type</string>
    <string name="allocation_send_message_to_material_predict_production_quantity">Predict quantity</string>
    <string name="allocation_send_message_to_material_real_production_quantity">Real quantity</string>
    <string name="allocation_send_message_to_material_date_year_month_day">Date</string>
    <string name="allocation_send_message_to_material_date_hour">Hour</string>
    <string name="allocation_send_message_to_material_date_minute">Minute</string>
    <string name="allocation_send_message_to_material_produce_transfer">Allocate and Transfer</string>
    <string name="allocation_send_message_to_material_produce_transfer_emp">Allocate and Transfer(Emp)</string>
    <string name="allocation_send_message_to_material_re_produce_transfer">Re-Allocate and Transfer</string>
    <string name="allocation_send_message_to_material_delete_detail">Delete Item</string>
    <string name="allocation_send_message_to_material_send_msg_to_material">Send Message</string>
    <string name="allocation_send_message_to_material_get_Locate_no_failed">Cannot find any Locate No. Please retry with the sync button in Action Bar.</string>
    <string name="allocation_send_message_to_material_get_Locate_no_success">Get Locate no success!</string>
    <string name="allocation_send_message_to_material_check_made_no_failed">Check Made-No failed. Please retry.</string>
    <string name="allocation_send_message_to_material_made_no_not_matched">No matched work order. Please input correct work order.</string>
    <string name="allocation_send_message_to_material_staging_area_not_matched">No matched staging area</string>
    <string name="allocation_send_message_to_material_request_time">Request Time</string>
    <string name="allocation_send_message_to_material_get_sfa_mess_failed">Cannot get allocation detail information. Please retry.</string>
    <string name="allocation_send_message_to_material_get_sfa_empty">No detail message.</string>
    <string name="allocation_send_message_to_material_status_detail_SFA03">Part No.</string>
    <string name="allocation_send_message_to_material_status_detail_IMA021">Name-Spec</string>
    <string name="allocation_send_message_to_material_status_detail_IMG10">Available Quantity</string>
    <string name="allocation_send_message_to_material_status_detail_MOVED_QTY">Moved Quantity</string>
    <string name="allocation_send_message_to_material_status_detail_MESS_QTY">Messages</string>
    <string name="allocation_send_message_to_material_status_detail_SFA05">Quantity should moved</string>
    <string name="allocation_send_message_to_material_status_detail_SFA12">Unit</string>
    <string name="allocation_send_message_to_material_status_detail_SFA11_NAME">Flag</string>
    <string name="allocation_send_message_to_material_status_detail_TC_OBF013">Capacity</string>
    <string name="allocation_send_message_to_material_reg_qty_zero">Input proper quantity</string>
    <string name="allocation_send_message_to_material_reg_qty_mismatch">Quantity mismatch</string>
    <string name="allocation_send_message_to_material_stock_no_mismatch">Stock No. mismatch</string>
    <string name="allocation_send_message_to_material_send_stock_empty">The part in stock is empty. Cannot send msg. </string>
    <string name="allocation_send_message_to_material_send_error">Send message error. Please Contact IT department.</string>
    <string name="allocation_send_message_to_material_the_msg_order_below">The message order below: </string>
    <string name="allocation_send_message_to_material_locate_list_empty">Cannot get locate information.</string>
    <string name="allocation_handle_message_delete_select">Delete elected message</string>
    <string name="allocation_button_message_list">Message List</string>
    <string name="allocation_button_scan_list">Scan List</string>
    <string name="shipment_shipping_notification_scanned_confirm">Scanned Confirm</string>
    <string name="shipment_shipping_notification">Shipping Notification No.</string>
    <string name="shipment_shipping_shipping">Shipping</string>
    <string name="shipment_shipping_scanned">Scanned</string>
    <string name="shipment_shipping_wait_scan">Available</string>
    <string name="shipment_shipping_rescan">Re-Scan</string>
</resources>