<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <!--item
            android:id="@+id/nav_receiving"
            android:icon="@drawable/baseline_archive_black_36"
            android:title="@string/nav_receiving" /-->

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/baseline_search_black_36"
            android:title="@string/action_allocation_find" />

        <item
            android:id="@+id/nav_allocation_send_msg"
            android:icon="@drawable/baseline_mail_black_36"
            android:title="@string/nav_allocation_send" />

        <item
        android:id="@+id/nav_allocation"
        android:icon="@drawable/baseline_unarchive_black_36"
        android:title="@string/nav_allocation" />

        <item
            android:id="@+id/nav_entering_warehouse"
            android:icon="@drawable/baseline_view_comfy_black_36"
            android:title="@string/nav_entering_warehouse" />

        <item
            android:id="@+id/nav_production_storage"
            android:icon="@drawable/baseline_move_to_inbox_black_36"
            android:title="@string/nav_production_storage" />

        <item
            android:id="@+id/nav_shipment"
            android:icon="@drawable/baseline_local_shipping_black_36"
            android:title="@string/nav_shipment" />

        <item
        android:id="@+id/nav_receiving_inspection"
        android:icon="@drawable/baseline_check_circle_black_36"
        android:title="@string/nav_receiving_inspection" />

        <item
            android:id="@+id/nav_print_test"
            android:icon="@drawable/baseline_print_black_36"
            android:title="@string/nav_print_test" />
    </group>

    <item android:title="@string/nav_other">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/baseline_settings_black_36"
                android:title="@string/nav_setting" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_exit_to_app_black_36"
                android:title="@string/nav_logout"
                android:visible="false"/>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/baseline_touch_app_black_36"
                android:title="@string/nav_login"
                android:visible="true"/>
            </group>
        </menu>
    </item>

</menu>
