<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/receiving_part_no"
        android:hint="@string/receiving_rec_no"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/receiving_part_date"
        android:inputType="date"
        android:maxLength="8"
        android:hint="@string/receiving_rec_date"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/receiving_vendor_no"
        android:hint="@string/receiving_vendor_no"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/receiving_edi"
        android:hint="@string/receiving_edi_shipping_no"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/receiving_locate"
        android:hint="@string/receiving_rec_locate_no"/>





    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnRecvAddNewCancel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:id="@+id/btnRecvAddNewConfirm"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1"
            android:enabled="false"/>
    </LinearLayout>


</LinearLayout>