<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/layoutScanWork"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextShipment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:hint="@string/shipment_shipping_notification"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/btnOkShipment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/confirm"
                    android:layout_weight="4"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnScannedConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/shipment_shipping_notification_scanned_confirm"
                    android:enabled="false"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewShipment"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">


                </android.support.v7.widget.RecyclerView>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutScanned"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewScanned"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutWaitForScan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/btnRescan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/shipment_shipping_rescan"
                android:enabled="false"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewWaitScan"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">


            </android.support.v7.widget.RecyclerView>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnScanWork"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shipment_shipping_shipping"
            android:enabled="false"/>

        <Button
            android:id="@+id/btnScanned"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shipment_shipping_scanned"/>

        <Button
            android:id="@+id/btnWaitForScan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shipment_shipping_wait_scan"
            />

    </LinearLayout>





</LinearLayout>