<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lookup_in_stock_list_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layoutSearchView"
            android:visibility="visible">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/serachPartNo"
                android:hint="@string/search_in_stock_part_no"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/searchBatchNo"
                android:hint="@string/search_in_stock_batch_no"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/searchName"
                android:hint="@string/search_in_stock_name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/searchSpec"
                android:hint="@string/search_in_stock_spec"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:id="@+id/btnSearch"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1" />

                <!--Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scm_clear"
                    android:id="@+id/btnLoginClear"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1" /-->
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/layoutResultView"
            android:visibility="gone">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scrollbars="vertical"
                >


            </android.support.v7.widget.RecyclerView>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/search_again"
                android:id="@+id/btnResearch"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="8" />
        </LinearLayout>
    </LinearLayout>




</RelativeLayout>